_docs/kustomize/akash-provider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akash-provider
spec:
  selector:
    matchLabels:
      app: akash-provider
  template:
    metadata:
      labels:
        app: akash-provider
    spec:
      containers:
        - name: akash-provider
          image: ovrclk/akashctl:latest
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh", "/boot/run.sh" ]
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: boot
              mountPath: /boot
              readOnly: true
            - name: keys
              mountPath: /boot-keys
              readOnly: true
      volumes:
        - name: boot
          configMap:
            name: akash-provider-boot
        - name: keys
          secret:
            secretName: akash-provider-keys
