_docs/kustomize/akash-provider/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akash-provider
spec:
  selector:
    app: akash-provider
    release: latest
  ports:
    - name: http
      port: 8080
