_docs/kustomize/akash-provider/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akash-provider
spec:
  rules:
    - host: akash-provider.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akash-provider
                port:
                  name: http
